# incident-response-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Incident_Response_Agent_Demo_Script.docx  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  start.ps1  start.sh  ~$cident_Response_Agent_Demo_Script.docx
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
.gstack/security-reports/: 2026-05-28-cso.json
backend/: Dockerfile  config.py  requirements-dev.txt  requirements.txt
backend/agents/: intake_agent.py  llm_factory.py  notify_agent.py  rca_agent.py  triage_agent.py
backend/api/: main.py
backend/audit/: log.py
backend/graph/: nodes.py  state.py  workflow.py
backend/mcp_server/: server.py
backend/mcp_server/tools/: email_tools.py  jira_tools.py  log_tools.py
backend/memory/: mem0_client.py
backend/observability/: langfuse_client.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatUI.tsx  HITLApprovalModal.tsx  IncidentDetails.tsx  RunHistory.tsx  WorkflowStepper.tsx
frontend/src/hooks/: useAgentStream.ts
tests/: conftest.py  test_agent_pipeline.py  test_agents.py  test_api.py  test_api_endpoints.py  test_audit_log.py  test_clients.py  test_config.py  test_graph.py  test_mcp_server.py  test_tools.py
